# Website-h-tr-h-c-t-p-thpt

./: .gitignore  README.md  UI_test.html  articles_api.json  baocao-web-hoc-toan.docx  cach_chạy.md  chucnang_db_sql.md  create_test_files.js  database_dbdiagram.md  dbdiagram.dbml  docs_api.json  erd_planuml.puml  euler_detail.json  sample_answer_key.xlsx  schema.sql  schema_mysql.sql  search_docx.py  search_spline.py  set_warning_streak.sh  test_exam.docx  thietke.md  usecase_account_management.puml  usecase_admin.puml  usecase_formula_feedback.puml  usecase_overview.puml  usecase_student.puml
backend/: Cargo.toml  test_post.js
backend/migrations/: 0001_init_mysql.sql  0002_unique_grade.sql  0003_remove_exam_difficulty_points.sql  0004_add_question_images.sql  0005_add_formulas_table.sql  0006_add_thumbnail_to_articles.sql  0007_add_formula_reward_granted.sql  0008_add_password_reset_tokens.sql
backend/src/: config.rs  db.rs  errors.rs  main.rs
backend/src/handlers/: admin.rs  auth.rs  bookmark.rs  document.rs  exam.rs  feedback.rs  formula.rs  mod.rs  subject.rs  upload.rs  user.rs
backend/src/middleware/: auth_jwt.rs
backend/src/models/: bookmark.rs  collection.rs  document.rs  exam.rs  feedback.rs  formula.rs  mod.rs  subject.rs  user.rs
backend/src/routes/: admin.rs  auth.rs  bookmark.rs  document.rs  exam.rs  feedback.rs  formula.rs  mod.rs  subject.rs  user.rs
extract/: analyze_docx.py  convert_mock_data.py  converted_test.tex  quiz-extractor.html  quiz_final.json  quiz_output.json  test_debug.py  test_final.py  test_output.md  test_output_tex.json  (+3 more)
(+428 files in other folders)
